{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 17,
  "lineage": "4ec78469-f94a-f311-12da-698ba10d3b5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06ab88ee047743656",
            "owner_id": "168500664641",
            "vpc_id": "vpc-0c44a8f53e61d9b23"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_remote_admin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:168500664641:security-group/sg-0f8cdbe61ef0e0263",
            "description": "Allow ssh and RDP inbound traffic",
            "egress": [],
            "id": "sg-0f8cdbe61ef0e0263",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "allow_remote_admin",
            "name_prefix": null,
            "owner_id": "168500664641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_remote_admin"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c44a8f53e61d9b23"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_rudder_internal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:168500664641:security-group/sg-0a15d1177a3daf833",
            "description": "Allow rudder connexion from web server",
            "egress": [],
            "id": "sg-0a15d1177a3daf833",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.30.2.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_rudder_internal",
            "name_prefix": null,
            "owner_id": "168500664641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rudder_internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c44a8f53e61d9b23"
          },
          "depends_on": [
            "aws_subnet.rudder",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:168500664641:security-group/sg-003c24560d40100b9",
            "description": "Allow web traffic to server",
            "egress": [],
            "id": "sg-003c24560d40100b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web",
            "name_prefix": null,
            "owner_id": "168500664641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c44a8f53e61d9b23"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rudder",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:168500664641:subnet/subnet-07fb39c020df23e4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.30.2.0/24",
            "id": "subnet-07fb39c020df23e4e",
            "map_public_ip_on_launch": false,
            "owner_id": "168500664641",
            "tags": {
              "Name": "rudder"
            },
            "vpc_id": "vpc-0c44a8f53e61d9b23"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:168500664641:vpc/vpc-0c44a8f53e61d9b23",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.30.0.0/16",
            "default_network_acl_id": "acl-049b10e89687bd46c",
            "default_route_table_id": "rtb-06f2e2954062d7fd9",
            "default_security_group_id": "sg-0ac767f79368a4015",
            "dhcp_options_id": "dopt-00001662",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c44a8f53e61d9b23",
            "instance_tenancy": "dedicated",
            "main_route_table_id": "rtb-06f2e2954062d7fd9",
            "owner_id": "168500664641",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}